Fixes layout issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@ a {
 }
 
 img {
+  width: 100%;
   max-width: 500px;
   max-height: 25vh;
   display: block;
